--- a/apps/docs/src/content/charts/base-chart.mdx
+++ b/apps/docs/src/content/charts/base-chart.mdx
@@ -1,5 +1,3 @@
-import { Callout } from "nextra/components";
-
 ### Base Chart
 
 **UI Kit** includes several chart components powered by ECharts. For unsupported chart types, use `HvBaseChart`—a flexible wrapper around the ECharts API that lets you build fully custom configurations.
@@ -85,7 +83,7 @@ export default function Demo() {
 }
 ```
 
-<Callout type="info">
-  Please check the [Charts examples page](/examples/charts) for more examples of
-  charts built with the `HvBaseChart` component.
-</Callout>
+> [!NOTE]
+>
+> For more chart examples, check out our [examples page](/examples/charts) or
+> [Stackblitz chart collection](https://stackblitz.com/orgs/github/lumada-design/collections/ui-kit-charts).
