--- a/apps/docs/src/content/components/accordion.mdx
+++ b/apps/docs/src/content/components/accordion.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   accordionClasses as classes,
   HvAccordion,
@@ -20,11 +19,11 @@ import { Header } from "../../components/Header";
   <div>My accordion example content</div>
 </Header>
 
-<Callout type="info">
-  You can use the `HvSection` component to create an accordion group that better
-  fits your needs. Please refer to the [Section
-  documentation](/components/section#multiple) for usage.
-</Callout>
+> [!NOTE]
+>
+> You can use the `HvSection` component to create an accordion group that better
+> fits your needs. Please refer to the [Section
+> documentation](/components/section#multiple) for usage.
 
 ### Controlled
 
