--- a/apps/docs/src/content/components/action-bar.mdx
+++ b/apps/docs/src/content/components/action-bar.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   actionBarClasses as classes,
   HvActionBar,
@@ -19,7 +18,7 @@ import { Header } from "../../components/Header";
 </HvActionBar>
 ```
 
-<Callout type="info">
-  Check the [Card](/components/card) component to see an example of the
-  `HvActionBar` in use.
-</Callout>
+> [!NOTE]
+>
+> Check the [Card](/components/card) component to see an example of the
+> `HvActionBar` in use.
