--- a/apps/docs/src/content/components/filter-group.mdx
+++ b/apps/docs/src/content/components/filter-group.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   filterGroupClasses as classes,
   HvFilterGroup,
@@ -8,11 +7,11 @@ import { Header } from "../../components/Header";
 
 <Header params={{ name: "FilterGroup", classes }} />
 
-<Callout type="warning">
-  This component offers one implementation of the **Filter Group** pattern. Due
-  to the variety of filtering needs, we recommend reviewing and extending the
-  code as needed. A more modular solution may be provided in the future.
-</Callout>
+> [!WARNING]
+>
+> This component offers one implementation of the **Filter Group** pattern. Due
+> to the variety of filtering needs, we recommend reviewing and extending the
+> code as needed. A more modular solution may be provided in the future.
 
 ### Usage
 
