--- a/apps/docs/src/content/components/grid.mdx
+++ b/apps/docs/src/content/components/grid.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   gridClasses as classes,
   HvGrid,
@@ -8,16 +7,16 @@ import { Header } from "../../components/Header";
 
 <Header params={{ name: "Grid", classes }} />
 
-<Callout type="info">
-  Please refer to the [Layout documentation](/docs/layout) for more information
-  on building layouts with UI Kit.
-</Callout>
+> [!NOTE]
+>
+> Please refer to the [Layout documentation](/docs/layout) for more information
+> on building layouts with UI Kit.
 
-<Callout type="info">
-  If you want to create a simple grid where items are distributed accross a
-  specific number of columns, checkout the
-  [`HvSimpleGrid`](/components/simple-grid) component.
-</Callout>
+> [!NOTE]
+>
+> If you want to create a simple grid where items are distributed accross a
+> specific number of columns, checkout the
+> [`HvSimpleGrid`](/components/simple-grid) component.
 
 ### Default grid
 
