--- a/apps/docs/src/content/components/lab.mdx
+++ b/apps/docs/src/content/components/lab.mdx
@@ -1,15 +1,13 @@
-import { Callout } from "nextra/components";
-
 # Lab
 
 Lab components are experimental components that are not yet stable enough to be part of the [core package](./).
 They are available for testing and feedback, but they may not be fully stable or feature-complete, and their API might change.
 
-<Callout type="info">
-  Component contributions from external contributors should be added to the lab
-  package. Check out our [contributing guide](/docs/contributing#new-components)
-  for more information.
-</Callout>
+> [!NOTE]
+>
+> Component contributions from external contributors should be added to the lab
+> package. Check out our [contributing guide](/docs/contributing#new-components)
+> for more information.
 
 Example:
 
