--- a/apps/docs/src/content/components/number-input.mdx
+++ b/apps/docs/src/content/components/number-input.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   inputClasses as classes,
   HvNumberInput,
@@ -21,7 +20,7 @@ import { Header } from "../../components/Header";
   decoratorClassName="w-full"
 />
 
-<Callout type="info">
-  The `HvNumberInput` component shares the same API as `HvInput`. For full
-  documentation, see the [HvInput component page](/components/input).
-</Callout>
+> [!NOTE]
+>
+> The `HvNumberInput` component shares the same API as `HvInput`. For full
+> documentation, see the [HvInput component page](/components/input).
