--- a/apps/docs/src/content/components/overflow-tooltip.mdx
+++ b/apps/docs/src/content/components/overflow-tooltip.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   overflowTooltipClasses as classes,
   HvOverflowTooltip,
@@ -6,10 +5,10 @@ import {
 
 import { Header } from "../../components/Header";
 
-<Callout type="info">
-  Check out the [`HvTooltip`](/components/tooltip) component for our regular
-  tooltip component.
-</Callout>
+> [!NOTE]
+>
+> Check out the [`HvTooltip`](/components/tooltip) component for our regular
+> tooltip component.
 
 <Header
   params={{ name: "OverflowTooltip", classes }}
