--- a/apps/docs/src/content/components/pagination.mdx
+++ b/apps/docs/src/content/components/pagination.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   paginationClasses as classes,
   HvPagination,
@@ -27,11 +26,11 @@ import { Header } from "../../components/Header";
   componentProps={{ style: { width: "100%" } }}
 />
 
-<Callout type="info">
-  You can use the `HvDotPagination` component to create a pagination based on
-  dots. Please refer to the [DotPagination
-  documentation](/components/dot-pagination) for usage.
-</Callout>
+> [!NOTE]
+>
+> You can use the `HvDotPagination` component to create a pagination based on
+> dots. Please refer to the [DotPagination
+> documentation](/components/dot-pagination) for usage.
 
 ### Usage
 
