--- a/apps/docs/src/content/components/select.mdx
+++ b/apps/docs/src/content/components/select.mdx
@@ -1,5 +1,3 @@
-import { Callout } from "nextra/components";
-
 import {
   selectClasses as classes,
   HvOption,
@@ -37,10 +35,10 @@ import { Header } from "../../components/Header";
   </HvOptionGroup>
 </Header>
 
-<Callout type="info">
-  If you need a search filter or multi-select checkboxes, consider using
-  [`HvDropdown`](/components/dropdown) instead.
-</Callout>
+> [!NOTE]
+>
+> If you need a search filter or multi-select checkboxes, consider using
+> [`HvDropdown`](/components/dropdown) instead.
 
 ### Options
 
