--- a/apps/docs/src/content/components/selection-list.mdx
+++ b/apps/docs/src/content/components/selection-list.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   selectionListClasses as classes,
   HvListItem,
@@ -31,11 +30,11 @@ import { Header } from "../../components/Header";
   <HvListItem value="eggplant">🍆 Eggplant</HvListItem>
 </Header>
 
-<Callout type="info">
-  If you need single selection, consider using
-  [`HvRadioGroup`](/components/radio-group) or [`HvSelect`](/components/select)
-  instead.
-</Callout>
+> [!NOTE]
+>
+> If you need single selection, consider using
+> [`HvRadioGroup`](/components/radio-group) or [`HvSelect`](/components/select)
+> instead.
 
 ### Controlled
 
