--- a/apps/docs/src/content/components/simple-grid.mdx
+++ b/apps/docs/src/content/components/simple-grid.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   simpleGridClasses as classes,
   HvPanel,
@@ -7,10 +6,10 @@ import {
 
 import { Header } from "../../components/Header";
 
-<Callout type="info">
-  Please check the [`HvGrid`](/components/grid) component documentation for more
-  advanced grid configurations.
-</Callout>
+> [!NOTE]
+>
+> Please check the [`HvGrid`](/components/grid) component documentation for more
+> advanced grid configurations.
 
 <Header
   params={{ name: "SimpleGrid", classes }}
