--- a/apps/docs/src/content/components/snackbar-provider.mdx
+++ b/apps/docs/src/content/components/snackbar-provider.mdx
@@ -1,15 +1,14 @@
-import { Callout } from "nextra/components";
 import { snackbarProviderClasses as classes } from "@hitachivantara/uikit-react-core";
 
 import { Header } from "../../components/Header";
 
 <Header params={{ name: "SnackbarProvider", classes }} />
 
-<Callout type="info">
-  The provider is not meant to be 100% feature complete, but instead, ease the
-  majority of use-cases we have been encountering. If you need any customization
-  or extension to the behavior, please feel free to copy and customize it.
-</Callout>
+> [!NOTE]
+>
+> The provider is not meant to be 100% feature complete, but instead, ease the
+> majority of use-cases we have been encountering. If you need any customization
+> or extension to the behavior, please feel free to copy and customize it.
 
 ```tsx
 import {
