--- a/apps/docs/src/content/components/textarea.mdx
+++ b/apps/docs/src/content/components/textarea.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   textAreaClasses as classes,
   HvTextArea,
@@ -24,13 +23,13 @@ import { Header } from "../../components/Header";
   }}
 />
 
-<Callout type="info">
-  The `HvTextArea` component is built on top of the [Input](/components/input)
-  component, therefore many properties are shared between the components. Please
-  refer to the [Input documentation](/components/input) for usage, like
-  [validation](/components/input#validation) or [controlled
-  state](/components/input#controlled) management.
-</Callout>
+> [!NOTE]
+>
+> The `HvTextArea` component is built on top of the [Input](/components/input)
+> component, therefore many properties are shared between the components. Please
+> refer to the [Input documentation](/components/input) for usage, like
+> [validation](/components/input#validation) or [controlled
+> state](/components/input#controlled) management.
 
 ### Maximum length
 
