--- a/apps/docs/src/content/components/tooltip.mdx
+++ b/apps/docs/src/content/components/tooltip.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   tooltipClasses as classes,
   HvButton,
@@ -22,15 +21,16 @@ import { Header } from "../../components/Header";
   <HvButton variant="primarySubtle">Hover or focus here</HvButton>
 </Header>
 
-<Callout type="info">
-  `HvTooltip` uses Material UI's tooltip under the hood. You can find more
-  information about the component [in their
-  documentation](https://mui.com/material-ui/react-tooltip/).
-</Callout>
-<Callout type="info">
-  If you're looking for a tooltip on overflowing content, check out the
-  [`HvOverflowTooltip`](/components/overflow-tooltip) component.
-</Callout>
+> [!NOTE]
+>
+> > `HvTooltip` uses Material UI's tooltip under the hood. You can find more
+> > information about the component [in their
+> > documentation](https://mui.com/material-ui/react-tooltip/).
+
+> [!NOTE]
+>
+> If you're looking for a tooltip on overflowing content, check out the
+> [`HvOverflowTooltip`](/components/overflow-tooltip) component.
 
 ### Disabled
 
