--- a/apps/docs/src/content/components/vertical-navigation.mdx
+++ b/apps/docs/src/content/components/vertical-navigation.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import { verticalNavigationClasses as classes } from "@hitachivantara/uikit-react-core";
 
 import { Header } from "../../components/Header";
@@ -11,10 +10,10 @@ import { Header } from "../../components/Header";
   }}
 />
 
-<Callout type="info">
-  Use mode="disclosure" for most apps. Avoid mode="treeview" unless complex
-  hierarchy and custom keyboard interaction are required.
-</Callout>
+> [!NOTE]
+>
+> Use mode="disclosure" for most apps. Avoid mode="treeview" unless complex
+> hierarchy and custom keyboard interaction are required.
 
 ### Usage
 
