--- a/apps/docs/src/content/docs/accessibility.mdx
+++ b/apps/docs/src/content/docs/accessibility.mdx
@@ -1,5 +1,3 @@
-import { Callout } from "nextra/components";
-
 # Accessibility
 
 We are committed to building a component library that adheres to accessibility best practices. Our components are developed and tested to align with [WCAG (Web Content Accessibility Guidelines)](https://www.w3.org/WAI/standards-guidelines/wcag/) and [Section 508](https://www.section508.gov/) standards.
@@ -12,11 +10,11 @@ Because many **UI Kit** components are custom-built, we pay particular attention
 
 Accessibility is an ongoing effort. If you encounter a component that could be improved, we encourage you to share your feedback — we’re always looking to improve.
 
-<Callout type="warning">
-  While we strive to provide accessible components out of the box, developers
-  are responsible for ensuring accessibility within their applications by using
-  components correctly and in context.
-</Callout>
+> [!WARNING]
+>
+> While we strive to provide accessible components out of the box, developers
+> are responsible for ensuring accessibility within their applications by using
+> components correctly and in context.
 
 ## Keyboard Navigation
 
