--- a/apps/docs/src/content/docs/color-tokens.mdx
+++ b/apps/docs/src/content/docs/color-tokens.mdx
@@ -1,5 +1,3 @@
-import { Callout } from "nextra/components";
-
 import { ColorTokens } from "../../components/color/ColorTokens";
 
 # Color Tokens
@@ -7,11 +5,11 @@ import { ColorTokens } from "../../components/color/ColorTokens";
 Color tokens are the **semantic layer** of the **UI Kit** color system, providing **consistent**, and **themeable** values for UI development.
 They ensure design integrity, maintainability, and seamless alignment between design and implementation.
 
-<Callout type="info">
-  Think of color tokens as the handshake between design and development. They
-  keep everyone on the same page — so always use them to ensure things stay
-  consistent and clean.
-</Callout>
+> [!NOTE]
+>
+> Think of color tokens as the handshake between design and development. They
+> keep everyone on the same page — so always use them to ensure things stay
+> consistent and clean.
 
 Color tokens can be accessed through the `theme.colors` object:
 
