--- a/apps/docs/src/content/docs/forms.mdx
+++ b/apps/docs/src/content/docs/forms.mdx
@@ -1,5 +1,3 @@
-import { Callout } from "nextra/components";
-
 import { CodeBlock } from "../../components/code/CodeBlock";
 import nativeFormCode from "../../examples/forms/NativeForm?raw";
 import reactFormCode from "../../examples/forms/ReactForm?raw";
@@ -15,10 +13,10 @@ The **UI Kit** includes a set of **form components** designed to offer a **consi
 
 All form components are built on top of [`HvFormElement`](/components/form-element), which provides a shared API to handle events, manage `status`, and expose a `value` prop to support controlled components.
 
-<Callout type="warning">
-  Not all UI Kit form components support native form data serialization or
-  validation.
-</Callout>
+> [!WARNING]
+>
+> Not all UI Kit form components support native form data serialization or
+> validation.
 
 For a complete list of available components, check out [`HvFormElement`’s related components](/components/form-element#related-components).
 
