--- a/apps/docs/src/content/docs/icons.mdx
+++ b/apps/docs/src/content/docs/icons.mdx
@@ -1,5 +1,3 @@
-import { Callout } from "nextra/components";
-
 # Icons
 
 The **UI Kit** is designed to work seamlessly with popular icon libraries like **[Phosphor Icons](https://phosphoricons.com)**, **[Font Awesome](https://fontawesome.com)** or **[Material Icons](https://mui.com/material-ui/material-icons/)**.
@@ -23,11 +21,11 @@ export default function Demo() {
 }
 ```
 
-<Callout type="info">
-  To easily convert `.svg` files to React components, use
-  [SVGR](https://react-svgr.com) and
-  [`vite-plugin-svgr`](https://www.npmjs.com/package/vite-plugin-svgr).
-</Callout>
+> [!NOTE]
+>
+> To easily convert `.svg` files to React components, use
+> [SVGR](https://react-svgr.com) and
+> [`vite-plugin-svgr`](https://www.npmjs.com/package/vite-plugin-svgr).
 
 Given a `<CustomIcon />` SVG React component, usage would look like this:
 
