--- a/apps/docs/src/content/docs/layout.mdx
+++ b/apps/docs/src/content/docs/layout.mdx
@@ -1,15 +1,13 @@
-import { Callout } from "nextra/components";
-
 # Layout
 
 When building UIs you should always strive for **responsive layouts** to enable your pages to adapt to different screen sizes and orientations,
 ensuring overall consistency across platforms and environments.
 
-<Callout type="info">
-  While responsive design is a best practice, not all applications need to
-  support every viewport size. Consider your users and use cases—target the
-  screen sizes that make sense for your specific product or context.
-</Callout>
+> [!NOTE]
+>
+> While responsive design is a best practice, not all applications need to
+> support every viewport size. Consider your users and use cases—target the
+> screen sizes that make sense for your specific product or context.
 
 ### Breakpoints
 
