--- a/apps/docs/src/content/docs/styling.mdx
+++ b/apps/docs/src/content/docs/styling.mdx
@@ -1,5 +1,3 @@
-import { Callout } from "nextra/components";
-
 # Styling
 
 Although **UI Kit** components are pre-styled with with the Design System specifications, sometimes there's a need to customize them in order to meet your specific needs.
@@ -78,11 +76,11 @@ The **UI Kit** is built using [Emotion](https://emotion.sh), a CSS-in-JS library
 Emotion supports creating complex, reusable classes using the `css` prop, or components via the `styled` function.
 It is especially useful when dealing with complex styles or overrides, or when the components need additional overrides.
 
-<Callout type="info">
-  Please check out the [Emotion Best
-  Practices](https://emotion.sh/docs/best-practices) for a guide on how to use
-  Emotion effectively, such as leveraging colocation or type-safety.
-</Callout>
+> [!NOTE]
+>
+> Please check out the [Emotion Best
+> Practices](https://emotion.sh/docs/best-practices) for a guide on how to use
+> Emotion effectively, such as leveraging colocation or type-safety.
 
 #### Using the `css` function
 
@@ -135,12 +133,12 @@ The **UI Kit** team recommends utility classes due to their **built-in theme sup
 
 #### Setup
 
-<Callout type="info">
-  Please check out the [uno-preset
-  package](https://github.com/lumada-design/hv-uikit-react/blob/master/packages/uno-preset)
-  and the [official UnoCSS docs](https://unocss.dev/integrations) for a full
-  setup guide.
-</Callout>
+> [!NOTE]
+>
+> Please check out the [uno-preset
+> package](https://github.com/lumada-design/hv-uikit-react/blob/master/packages/uno-preset)
+> and the [official UnoCSS docs](https://unocss.dev/integrations) for a full
+> setup guide.
 
 1. Install UnoCSS and the **UI Kit** UnoCSS plugin packages
 
