--- a/apps/docs/src/content/components/dot-pagination.mdx
+++ b/apps/docs/src/content/components/dot-pagination.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   dotPaginationClasses as classes,
   HvDotPagination,
@@ -8,11 +7,11 @@ import { Header } from "../../components/Header";
 
 <Header params={{ name: "DotPagination", classes }} />
 
-<Callout type="info">
-  You can use the `HvPagination` component to create a more complete pagination
-  layout. Please refer to the [Pagination documentation](/components/pagination)
-  for usage.
-</Callout>
+> [!NOTE]
+>
+> You can use the `HvPagination` component to create a more complete pagination
+> layout. Please refer to the [Pagination documentation](/components/pagination)
+> for usage.
 
 ### Usage
 
