--- a/apps/docs/src/content/components/form-element.mdx
+++ b/apps/docs/src/content/components/form-element.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   formElementClasses as classes,
   HvAdornment,
@@ -49,11 +48,11 @@ import { Header } from "../../components/Header";
   <HvWarningText disableBorder>This is the error message.</HvWarningText>
 </Header>
 
-<Callout type="warning">
-  You probably don't need to use this component directly. Instead, please check
-  out [Related components](#related-components) for a list of *ready-to-use* UI
-  Kit form components.
-</Callout>
+> [!WARNING]
+>
+> You probably don't need to use this component directly. Instead, please check
+> out [Related components](#related-components) for a list of _ready-to-use_ UI
+> Kit form components.
 
 ### Building blocks
 
