--- a/apps/docs/src/content/components/search-input.mdx
+++ b/apps/docs/src/content/components/search-input.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   inputClasses as classes,
   HvSearchInput,
@@ -21,8 +20,8 @@ import { Header } from "../../components/Header";
   decoratorClassName="w-full"
 />
 
-<Callout type="info">
-  The `HvSearchInput` component shares the same API as the `HvInput` component.
-  Please check the [HvInput component page](/components/input) for
-  documentation.
-</Callout>
+> [!NOTE]
+>
+> The `HvSearchInput` component shares the same API as the `HvInput` component.
+> Please check the [HvInput component page](/components/input) for
+> documentation.
