--- a/apps/docs/src/content/components/table.mdx
+++ b/apps/docs/src/content/components/table.mdx
@@ -1,4 +1,3 @@
-import { Callout } from "nextra/components";
 import {
   tableClasses as classes,
   HvTable,
@@ -22,11 +21,11 @@ import { Header } from "../../components/Header";
   }}
 />
 
-<Callout type="info">
-  Please check our [table examples](/examples/tables) and or the [`react-table`
-  examples](https://react-table-v7-docs.netlify.app/docs/examples/basic) for
-  usage scenarios.
-</Callout>
+> [!NOTE]
+>
+> Please check our [table examples](/examples/tables) and or the [`react-table`
+> examples](https://react-table-v7-docs.netlify.app/docs/examples/basic) for
+> usage scenarios.
 
 ## Table components
 
@@ -35,11 +34,11 @@ These components provide the visual Design System alignment and support features
 
 Check out the [props tab](?tab=props) for the list of components and their properties.
 
-<Callout type="info">
-  Although it is possible to use the components directly, we recommended users
-  to use them along with the [`useHvTable`](#usehvtable) hook, which provides a
-  powerful API for managing tables.
-</Callout>
+> [!NOTE]
+>
+> Although it is possible to use the components directly, we recommended users
+> to use them along with the [`useHvTable`](#usehvtable) hook, which provides a
+> powerful API for managing tables.
 
 ```tsx live
 <HvTable>
