docs(browsers): align with Web Baseline

--- a/apps/docs/src/content/docs/project-status.mdx
+++ b/apps/docs/src/content/docs/project-status.mdx
@@ -30,10 +30,13 @@ To learn more about our release cadence and versioning principles, see the [Rele
 
 ## Browsers Support
 
-**UI Kit** supports the latest stable versions of all major modern browsers:
+**UI Kit** adheres to the [Web Platform Baseline](https://web.dev/baseline) specification, supporting the latest stable versions of all major modern browsers:
 
 | Edge | Firefox | Chrome | Safari (macOS) |
 | :--: | :-----: | :----: | :------------: |
 |  ✅  |   ✅    |   ✅   |       ✅       |
+
+While most features in **UI Kit** align with the _Widely available_ stage of the Web Platform Baseline,
+some may use features from the _Newly available_ stage, following the [_Progressive enhancement_](https://developer.mozilla.org/en-US/docs/Glossary/Progressive_Enhancement) philosophy.
 
 For the best experience, we recommend keeping browsers up to date.
