--- a/apps/docs/src/app/examples/charts/page.mdx
+++ b/apps/docs/src/app/examples/charts/page.mdx
@@ -4,18 +4,22 @@ import gaugeChart from "./GaugeChart?raw";
 import lineChartStreamingCode from "./LineChartStreaming?raw";
 
 <div className="overflow-hidden mt-20">
-  <div className="w-101% grid  divide-border [grid-template-columns:repeat(auto-fit,minmax(480px,1fr))] -mt-px -mb-px">
-    <PopupLayoutPreview>
-      <span>A donut chart that includes a total in the middle.</span>
-      <CodeBlock code={{ main: donutChartTotal }} layout="popup" />
-    </PopupLayoutPreview>
-    <PopupLayoutPreview>
-      <span>A gauge charte that includes a threshold indicator.</span>
-      <CodeBlock code={{ main: gaugeChart }} layout="popup" />
-    </PopupLayoutPreview>
-    <PopupLayoutPreview>
-      <span>A line chart with streaming data.</span>
-      <CodeBlock code={{ main: lineChartStreamingCode }} layout="popup" />
-    </PopupLayoutPreview>
+  {/* <div className="w-101% grid  divide-border [grid-template-columns:repeat(auto-fit,minmax(480px,1fr))] -mt-px -mb-px"> */}
+  <div className="w-101% grid divide-border [grid-template-columns:repeat(auto-fit,minmax(480px,1fr))] -mt-px -mb-px [&>*]:min-h-[200px]">
+    <CodeBlock
+      code={{ main: donutChartTotal }}
+      layout="popup"
+      title="Ticket Sales by Country"
+    />
+    <CodeBlock
+      code={{ main: gaugeChart }}
+      layout="popup"
+      title="Risk Assessment Gauge"
+    />
+    <CodeBlock
+      code={{ main: lineChartStreamingCode }}
+      layout="popup"
+      title="Line Chart Streaming"
+    />
   </div>
 </div>
