docs: align docs contents with latest ds6

--- a/apps/docs/src/content/docs/icon-library.mdx
+++ b/apps/docs/src/content/docs/icon-library.mdx
@@ -2,7 +2,7 @@ import { IconLibrary, IconPlayground } from "../../components/icons";
 
 # Icon Library
 
-The **UI Kit** includes a comprehensive library of SVG icons packaged as React components, specifically designed for use with the [NEXT Design System](https://designsystem.hitachivantara.com/6c705d900/p/31e481-icons).
+The **UI Kit** includes a comprehensive library of SVG icons packaged as React components, specifically designed for use with the [NEXT Design System](https://designsystem.hitachi.com).
 
 These icons are available through the `@hitachivantara/uikit-react-icons` package and are fully compatible with the [`HvIconContainer`](/components/icon-container) API, ensuring consistent sizing, color, and alignment across the system.
 
