--- a/apps/docs/src/content/docs/project-status.mdx
+++ b/apps/docs/src/content/docs/project-status.mdx
@@ -4,7 +4,7 @@
 
 ## Design System Support
 
-Originally built on the [Next Design System](https://designsystem.hitachivantara.com/6c705d900/p/43c9a1-next-design-system), **UI Kit** has since evolved into a **design system–agnostic** library, powered by a flexible [theming system](/docs/theming) that allows teams to meet diverse branding and design requirements.
+Originally built on the [Next Design System](https://designsystem.hitachi.com), **UI Kit** has since evolved into a **design system–agnostic** library, powered by a flexible [theming system](/docs/theming) that allows teams to meet diverse branding and design requirements.
 
 Recent development has focused on supporting the **Pentaho+ Design System**, so updates related to the **NEXT Design System** may take longer to be fully reflected in the current **UI Kit** version.
 
@@ -22,7 +22,7 @@ Below is an overview of the supported **UI Kit** versions, along with their corr
 
 | Release Date | UI Kit Version                                       | Design System Version                                                                            | React Version | MUI Version                    | Emotion Version |
 | ------------ | ---------------------------------------------------- | ------------------------------------------------------------------------------------------------ | ------------- | ------------------------------ | --------------- |
-| Mar 2023     | [v5.x](https://lumada-design.github.io/uikit/master) | Pentaho+ 0.x <br/> [NEXT 5.x](https://designsystem.hitachivantara.com/)                          | 17, 18, 19    | [MUI 5.x](https://mui.com/)    | 11.x            |
+| Mar 2023     | [v5.x](https://lumada-design.github.io/uikit/master) | Pentaho+ 0.x <br/> [NEXT 5.x](https://designsystem.hitachi.com)                                  | 17, 18, 19    | [MUI 5.x](https://mui.com/)    | 11.x            |
 | Sep 2022     | [v4.x](https://lumada-design.github.io/uikit/v4.x)   | [NEXT 3.x](https://hitachivantara.sharepoint.com/sites/DesignSystem/Pattern%20Library/Home.aspx) | 16, 17        | [MUI 5.x](https://mui.com/)    | 11.x            |
 | Oct 2020     | [v3.x](https://lumada-design.github.io/uikit/v3.x)   | [NEXT 3.x](https://hitachivantara.sharepoint.com/sites/DesignSystem/Pattern%20Library/Home.aspx) | 16, 17        | [MUI 4.x](https://v4.mui.com/) | —               |
 
