--- a/apps/docs/src/content/docs/theming.mdx
+++ b/apps/docs/src/content/docs/theming.mdx
@@ -12,7 +12,7 @@ The **theme** object serves as the **UI Kit** foundation, defining all styling s
 
 **UI Kit** includes three default themes, each available in two color modes: **dawn** (light) and **wicked** (dark):
 
-- **ds3** and **ds5** — aligned with the [Next Design System](https://designsystem.hitachivantara.com/6c705d900/p/43c9a1-next-design-system)
+- **ds3** and **ds5** — aligned with the [Next Design System](https://designsystem.hitachi.com)
 - **pentahoPlus** — aligned with the Pentaho Design System
 
 Use the `HvProvider` to configure the active theme and color mode:
