chore: replace pentaho+ by pentaho on docs contents

--- a/apps/docs/src/content/components/canvas.mdx
+++ b/apps/docs/src/content/components/canvas.mdx
@@ -1,6 +1,6 @@
 # What are Canvas components?
 
-Canvas components are a set of UI components designed to address specific needs of Pentaho+ applications that use
+Canvas components are a set of UI components designed to address specific needs of Pentaho applications that use
 a canvas-based interface. For that reason, they are available in the `@hitachivantara/uikit-react-pentaho` package.
 
 ## Installation
