--- a/apps/docs/src/content/components/footer.mdx
+++ b/apps/docs/src/content/components/footer.mdx
@@ -11,7 +11,7 @@ import { Header } from "../../components/Header";
   componentName="HvFooter"
   controls={{
     name: {
-      defaultValue: "Pentaho+",
+      defaultValue: "Pentaho",
     },
     copyright: {
       defaultValue: "",
@@ -32,7 +32,7 @@ You can pass custom content to the `name`, `copyright`, and `links` props.
 ```tsx live
 <HvFooter
   className="w-full"
-  name={<HvTypography variant="title4">Pentaho+</HvTypography>}
+  name={<HvTypography variant="title4">Pentaho</HvTypography>}
   copyright={
     <HvTypography variant="caption1">Get a Grip On Your Data</HvTypography>
   }
