--- a/apps/docs/src/content/components/header.mdx
+++ b/apps/docs/src/content/components/header.mdx
@@ -22,7 +22,7 @@ can also use your own components.
 
 ```tsx live
 <HvHeader position="relative" className="mb-lg w-full">
-  <HvHeaderBrand name="Pentaho+" />
+  <HvHeaderBrand name="Pentaho" />
   <HvHeaderActions>
     <HvIconButton title="Open Notifications panel">
       <HvBadge label={1} icon={<Alert />} />
@@ -54,7 +54,7 @@ export default function Demo() {
           <Menu />
         </HvIconButton>
       )}
-      <HvHeaderBrand name="Pentaho+" />
+      <HvHeaderBrand name="Pentaho" />
       {isLgUp && (
         <HvHeaderNavigation
           data={navigationDataMain}
