chore: update pentaho+ references and ds6 links on docs

--- a/apps/docs/src/content/app-shell/configuration.mdx
+++ b/apps/docs/src/content/app-shell/configuration.mdx
@@ -79,7 +79,7 @@ The base path for the product, required when it isn't hosted at the root of the 
 
 Defines the product logo. It includes:
 
-- `name`: Either `HITACHI`, `LUMADA`, or `PENTAHO+`. Defaults to `HITACHI`.
+- `name`: Either `HITACHI`, `LUMADA`, or `PENTAHO`. Defaults to `HITACHI`.
 - `description`: The descriptive text of the logo, that is also subject to internationalization.
 
 If you don't want to add a logo to the header, explicitly set the menu item `logo` to `null`.
